--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
         return response.json()
       }
     }).then((data) => {
-      document.getElementById("test1").innerHTML = data[0].agents.id;
+      document.getElementById("test1").innerHTML = data[0].id;
     }).catch((error) => {
       const p = document.createElement("p");
       p.appendChild(document.createTextNode(`Error: ${error.message}`));
