--- a/properties.html
+++ b/properties.html
@@ -154,7 +154,7 @@
           <div class="col-md-12">
             <div class="view-options bg-white py-3 px-3 d-md-flex align-items-center">
               <div class="mr-auto">
-                <a href="index.html" class="icon-view view-module active"><span class="icon-view_module"></span></a>
+                <a href="index.html" class="icon-view view-module active"><span class="icon-view_module">fonro</span></a>
                 <a href="#" class="icon-view view-list"><span class="icon-view_list"></span></a>
 
               </div>
