--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-10">
-            <h1 class="mb-2">About Forno</h1>
+            <h1 class="mb-2">About Fonro</h1>
           </div>
         </div>
       </div>
@@ -328,7 +328,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="mb-5">
-              <h3 class="footer-heading mb-4">About Forno</h3>
+              <h3 class="footer-heading mb-4">About Fonro</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe pariatur reprehenderit vero atque, consequatur id ratione, et non dignissimos culpa? Ut veritatis, quos illum totam quis blanditiis, minima minus odio!</p>
             </div>
           </div>
