--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <p id="test1"></p>
+    <a href="tel:0817679933">test</a>
   </body>
   <script type="text/javascript">
     fetch('agents.json').then((response) => {
